Fixed flexbox bug on IE

--- a/themes/2015/source/css/_partial/location.styl
+++ b/themes/2015/source/css/_partial/location.styl
@@ -12,11 +12,13 @@
     height: auto
     flex: 0 0 50%
 
-#address
+#address-wrap
   background: darken(color-background-location, 20%)
-  padding: 25px 30px
   @media mq-normal
     flex: 0 0 50%
+
+#address
+  padding: 25px 30px
 
 #address-name
   font-weight: bold
